<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>es.udc.gac</groupId>
	<artifactId>bigdec</artifactId>
	<version>1.0</version>
	<packaging>jar</packaging>

	<name>BigDEC</name>
	<url>https://github.com/UDC-GAC/BigDEC</url>
	<licenses>
		<license>
			<name>GNU General Public Licence Version 3</name>
			<url>https://www.gnu.org/licenses/gpl.txt</url>
		</license>
	</licenses>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<hadoop-sequence-parser.version>1.3</hadoop-sequence-parser.version>
		<spark.version>3.0.0</spark.version>
		<flink.version>1.12.0</flink.version>
		<scala.binary.version>2.12</scala.binary.version>
		<commons-cli.version>1.5.0</commons-cli.version>
		<commons-lang3.version>3.12.0</commons-lang3.version>
		<reload4j.version>1.2.19</reload4j.version>
		<slf4j.version>1.7.36</slf4j.version>
		<java.version>1.8</java.version>
		<maven.compiler.version>3.10.1</maven.compiler.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.shade.version>3.2.4</maven.shade.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>es.udc.gac</groupId>
			<artifactId>hadoop-sequence-parser</artifactId>
			<version>${hadoop-sequence-parser.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>${commons-cli.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commons-lang3.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-reload4j</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.reload4j</groupId>
			<artifactId>reload4j</artifactId>
			<version>${reload4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.spark</groupId>
			<artifactId>spark-core_${scala.binary.version}</artifactId>
			<version>${spark.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.spark</groupId>
			<artifactId>spark-sql_${scala.binary.version}</artifactId>
			<version>${spark.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.flink</groupId>
			<artifactId>flink-java</artifactId>
			<version>${flink.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.flink</groupId>
			<artifactId>flink-streaming-java_${scala.binary.version}</artifactId>
			<version>${flink.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.flink</groupId>
			<artifactId>flink-hadoop-compatibility_${scala.binary.version}</artifactId>
			<version>${flink.version}</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.version}</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>${maven.shade.version}</version>
				<configuration>
					<createDependencyReducedPom>false</createDependencyReducedPom>
					<finalName>${project.artifactId}-bin</finalName>
					<shadedArtifactAttached>false</shadedArtifactAttached>
					<shadeSourcesContent>true</shadeSourcesContent>
					<relocations>
						<relocation>
							<pattern>org.apache.commons.cli</pattern>
							<shadedPattern>org.shaded.commons.cli</shadedPattern>
						</relocation>
						<relocation>
							<pattern>org.apache.flink.hadoopcompatibility</pattern>
							<shadedPattern>org.shaded.apache.flink.hadoopcompatibility</shadedPattern>
						</relocation>
					</relocations>
					<artifactSet>
						<excludes>
							<exclude>org.apache.flink:force-shading</exclude>
							<exclude>com.google.code.findbugs:jsr305</exclude>
						</excludes>
					</artifactSet>
					<filters>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>META-INF/MANIFEST*</exclude>
								<exclude>META-INF/DEPENDENCIES*</exclude>
								<exclude>META-INF/LICENSE*</exclude>
								<exclude>META-INF/NOTICE*</exclude>
								<exclude>META-INF/*.SF</exclude>
								<exclude>META-INF/*.DSA</exclude>
								<exclude>META-INF/*.RSA</exclude>
								<exclude>Log4j*</exclude>
							</excludes>
						</filter>
					</filters>
					<transformers>
						<transformer
							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
							<manifestEntries>
								<Multi-Release>true</Multi-Release>
							</manifestEntries>
						</transformer>
						<transformer
							implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer">
						</transformer>
					</transformers>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project> 
